--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB connection string
-MONGODB_URL=mongodb+srv://jayminprajapati5959:jaimin1902@cluster0.p040c.mongodb.net/
+MONGODB_URL=mongodb+srv://erbitservices:Erbrother@3107@cluster0.qyjc1.mongodb.net/
 # Port for the server to listen on
 PORT=4000
 
